# Reach-Web-Service

./: .gitignore  Cargo.toml  README.md  spec.md
cli/: Cargo.toml  control_panel.rs  lib.rs  main.rs  worker.rs
cli/js/: deno.ts  repl.ts
cli/js/ops/: rws_server.ts
cli/ops/: mod.rs  rws_server.rs
control-panel/dst/pages/: index.js
control-panel/src/: app.js
control-panel/src/pages/: index.tsx
example-app/: issue1.md  manifest.json  module.ts
example-app/html_admin/dst/: index.js
example-app/html_public/dst/: index.d.ts  index.d.ts.map  index.js.map
example-app/html_public/src/: index.tsx
example-app/html_public/views/: index.tsx
example-app/services/dst/: index.js
rws/: Cargo.toml  main.rs  typescript_watcher.rs
webpack-amd/: package-lock.json  package.json  run.js  webpack.config.prod.js
webpack-amd/libs/react/: lib.js
