[package]
name = "rws"
version = "0.1.0"
authors = ["Scott Lott <Scott@ClickSimply.com>"]
edition = "2018"
default-run = "rws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-files = "0.2.2"
actix-web-actors = "2.0.0"
actix-rt = "1.1.1"
dissimilar = "1.0.2"
deno_core = { path = "../core", version = "0.49.0" }
deno_cli = { path = "../cli", version = "1.2.0" }
deno_typescript = { path = "../deno_typescript", version = "0.49.0" }
lazy_static = "1.4.0"
log = "0.4.11"
futures = "0.3.5"
serde_json = "1.0.56"
clap = "2.33.1"
indexmap = "1.4.0"
nix = "0.17.0"
rand = "0.7.3"
regex = "1.3.9"
serde = "1.0.114"
serde_derive = "1.0.114"
tokio = "0.2.21"
url = "2.1.1"
deno_lint = "0.1.16"
notify = "5.0.0-pre.2"
walkdir = "2.3.1"

[[bin]]
name = "rws"
path = "main.rs"
